# comfyUI-PL-data-tools

./: .gitignore  __init__.py  areas_generator.py  batch_image_getter.py  close_images_searcher.py  pyproject.toml  utils.py
embeddings_databases/: bottle_contamination.json  pothole-val.json
